// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`atRules 1`] = `
"@foo a {
  color: red;
}

@foo b {
  color: red;
  text-align: center;
}

@foo c {
  .bar,
  .baz {
    color: red;
  }
}
"
`;

exports[`comments 1`] = `
".foo {
  /* the color is red */
  color: red;
}

.foo {
  /* the color is red */

  color: red;
}

.foo {
  color: red;
  /* the color is red */
}

.foo {
  color: red;
  /* the color is red */
}

.foo {
  color: red;

  /* the color is red */
}

.foo {
  color: red;

  /* the color is red */
}

.foo {
  color: red;
  /* text to the right */
  text-align: right;
}

.foo {
  color: red;
  /* text to the right */

  text-align: right;
}

.foo {
  color: red;

  /* text to the right */
  text-align: right;
}
"
`;

exports[`rules 1`] = `
".a {}

.b {
  color: red;
}
"
`;

exports[`selectors 1`] = `
".a,
.b {
  color: red;
}

.a > .b {
  color: red;
}
"
`;
